src/App.css
main {
  max-width: 1000px;
  margin: 0 auto;
  text-align: center;
}
h1,
h3 {
  text-align: center;
  margin: 2rem 0 0 0;
  padding: 0;
}
pre {
  color: white;
  background-color: #353535;
  padding: 1rem;
  border-radius: 0.5rem;
  overflow-x: auto;
}
.lists {
  font-size: 0.8em;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-wrap: wrap;
}
.lists > * {
  margin: 4rem;
}

